envoy/etc_envoy/conf.d/lds.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: listener_asr
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: ingress_asr
        upgrade_configs:
        - upgrade_type: websocket
        route_config:
          name: local_route
          virtual_hosts:
          - name: virtual_host_asr
            domains:
            - "*"
            routes:
            - match:
                prefix: "/asr/v0.2"
              route:
                timeout: 3600s
                cluster: asr_v0.2
              name: route_asr_v0.2
            - match:
                prefix: "/asr/v0.3"
              route:
                timeout: 3600s
                cluster: asr_v0.3
              name: route_asr_v0.3
        http_filters:
        - name: envoy.filters.http.router
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        access_log:
          name: log_asr
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
            path: /var/log/envoy/access.log
            typed_json_format:
              request_start_time: "%START_TIME%"
              hostname: "%HOSTNAME%"
              downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
              downstream_remote_address_without_port: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
              downstream_direct_remote_address: "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%"
              downstream_direct_remote_address_without_port: "%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%"
              upstream_cluster: "%UPSTREAM_CLUSTER%"
              upstream_host: "%UPSTREAM_HOST%"
              duration: "%DURATION%"
              method: "%REQ(:METHOD)%"
              bytes_received: "%BYTES_RECEIVED%"
              bytes_sent: "%BYTES_SENT%"
              response_code: "%RESPONSE_CODE%"
              response_code_details: "%RESPONSE_CODE_DETAILS%"
              connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
              upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
              response_flags: "%RESPONSE_FLAGS%"
              path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
              protocol: "%PROTOCOL%"
              user_agent: "%REQ(USER-AGENT)%"
              x_request_id: "%REQ(X-REQUEST-ID)%"
              x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
              x_forwarded_proto: "%REQ(X-FORWARDED-PROTO)%"
              x_lx_project_name: "%REQ(X-LX-PROJECT-NAME)%"
              x_lx_task_id: "%REQ(X-LX-TASK-ID)%"
